fixed broken general resource link on mobile and changed default color from rose to green

--- a/client/src/scss/components/_resourcebase.scss
+++ b/client/src/scss/components/_resourcebase.scss
@@ -94,7 +94,7 @@
       transition: all 0.25s ease-in;
       &:hover {
         font-size: 1.3rem;
-        color: $rose;
+        color: $green;
         transition: all 0.25s ease-in;
       }
     }
